# Motor-Drive-Layer

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md
.github/workflows/: ci.yml  wheels.yml
bindings/: api_surface.json
bindings/cpp/examples/: cpp_wrapper_demo.cpp  pos_ctrl_demo.cpp  pos_repl_demo.cpp  scan_ids_demo.cpp
bindings/python/: LICENSE  README.md  pyproject.toml  setup.py
bindings/python/examples/: connection_test.py  damiao_dm_serial_demo.py  damiao_register_rw_demo.py  dm_serial_02_control_modes_demo.py  dm_serial_03_status_demo.py  dm_serial_05_setzero_timing_ab_test.py  dm_serial_06_recover_no_reboot_demo.py  dm_serial_control.py  dm_serial_leader_monitor_demo.py  dm_serial_pos_vel.py  maintenance.py  multi_motor_control.py  pos_ctrl_demo.py  pos_repl_demo.py  register_access.py  scan_ids_demo.py  simple_01_motor_control.py  socketcan_control.py
bindings/python/src/motor_drive_layer/: __init__.py  __init__.pyi  abi.py  abi.pyi  core.py  core.pyi  damiao_registers.py  damiao_registers.pyi  dm_device_runtime.py  dm_device_runtime.pyi  errors.py  errors.pyi  hardware_config.py  hardware_test.py  models.py  models.pyi  platform_hints.py
bindings/python/src/motor_drive_layer/cli/: main.py
bindings/python/src/motorbridge/: abi.py  core.py  hardware_config.py  hardware_test.py
bindings/python/src/motorbridge/cli/: main.py
bindings/python/src/motorbridge/configs/: damiao_dual_arm.yaml
bindings/python/tests/: test_abi_paths.py  test_api_surface.py  test_feedback_stats_api.py  test_hardware_config.py  test_hardware_test.py  test_import.py  test_platform_hints.py  test_register_metadata.py  test_typing_surface.py
cpp_damiao/: CMakeLists.txt  README.md
cpp_damiao/include/: motor_abi.h
cpp_damiao/include/damiao/: can_bus.hpp  dm_device_bus.hpp  dm_serial_bus.hpp  motor.hpp  protocol.hpp  registers.hpp  runtime.hpp  socketcan_bus.hpp
cpp_damiao/src/: dm_device_bus.cpp  dm_device_shim.cpp  dm_device_shim.h  dm_serial_bus_posix.cpp  dm_serial_bus_windows.cpp  dm_serial_codec.cpp  motor_abi.cpp  runtime.cpp  socketcan_bus.cpp
cpp_damiao/tests/: abi_smoke_test.cpp  dm_device_test.cpp  dm_serial_codec_test.cpp  motor_test.cpp  protocol_test.cpp  runtime_test.cpp  socketcan_codec_test.cpp
cpp_damiao/tools/: rebot_config.py  rebot_hardware_smoke.py  verify_python_compat.py
docs/: architecture.md  configuration.md  hardware-testing.md
docs/superpowers/specs/: 2026-07-10-dm-serial-1m-baud-design.md
examples/http_quad_control_demo/: server.py
motor_abi/: Cargo.toml
motor_abi/src/: controller_add_motor_ffi.rs  controller_lifecycle_ffi.rs  lib.rs  motor_control_ffi.rs  motor_lifecycle_ffi.rs  motor_register_ffi.rs  state_ffi.rs
motor_abi/src/param_ffi/: mod.rs
motor_abi/src/vendor_params/: mod.rs
motor_cli/: Cargo.toml
motor_cli/src/: args.rs  main.rs
scripts/: canable_restart.sh  canfd_restart.sh
tests/: test_cpp_abi_stage3_tools.py  test_damiao_only_workspace.py
