[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motorbridge"
dynamic = ["version"]
description = "Python SDK for the Motor-Drive-Layer C++ ABI"
readme = { text = "Python SDK for the Motor-Drive-Layer C++ ABI.", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Motor-Drive-Layer contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[tool.setuptools.dynamic]
version = { attr = "motorbridge._version.VERSION" }

[project.urls]
Homepage = "https://github.com/TheYoungW/Motor-Drive-Layer"
Repository = "https://github.com/TheYoungW/Motor-Drive-Layer"

[project.scripts]
motorbridge = "motorbridge.cli:main"
motorbridge-cli = "motorbridge.cli:main"
motorbridge-install-dm-device = "motorbridge.dm_device_runtime:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
motorbridge = ["lib/*", "lib/dm_device/*"]
