[build-system]
requires = ["setuptools>=77.0.3", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-drive-layer"
dynamic = ["version"]
description = "Python SDK for the Motor-Drive-Layer C++ ABI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Motor-Drive-Layer contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux",
]

[tool.setuptools.dynamic]
version = { attr = "motor_drive_layer._version.VERSION" }

[project.urls]
Homepage = "https://github.com/TheYoungW/Motor-Drive-Layer"
Repository = "https://github.com/TheYoungW/Motor-Drive-Layer"

[project.scripts]
motor-drive-layer = "motor_drive_layer.cli:main"
motor-drive-layer-cli = "motor_drive_layer.cli:main"
motor-drive-layer-install-dm-device = "motor_drive_layer.dm_device_runtime:main"
motor-drive-layer-hardware-test = "motor_drive_layer.hardware_test:main"

[project.optional-dependencies]
hardware = ["PyYAML>=6.0"]
test = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
motor_drive_layer = ["lib/*", "lib/dm_device/*", "configs/*.yaml"]
